--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,9 +1,13 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
+    implementation 'dev.nextftc:ftc:1.0.1'
+    implementation 'dev.nextftc:hardware:1.0.1'
     implementation 'org.firstinspires.ftc:Inspection:11.0.0'
     implementation 'org.firstinspires.ftc:Blocks:11.0.0'
     implementation 'org.firstinspires.ftc:RobotCore:11.0.0'
@@ -13,5 +17,15 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation 'com.pedropathing:ftc:2.0.2'
+    implementation 'com.pedropathing:telemetry:1.0.0'
+    implementation 'com.bylazar:fullpanels:1.0.6'
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
+    /*
+    implementation('com.acmerobotics.dashboard:dashboard:0.5.0') {
+            exclude group: 'org.firstinspires.ftc'
+    }
+     */
 }
 
